[tool.poetry]
name = "model-zoo"
version = "0.1.1"
description = ""
authors = ["jchauhan <jitendra.chauhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.7"
langchain-groq = "^0.1.6"
langchain-openai = "^0.1.14"
langchain-google-genai = "^1.0.7"
retry = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
