[tool.poetry]
name = "dtx-model-zoo"
version = "0.1.1"
description = ""
authors = ["jchauhan <jitendra@detoxio.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "*"
langchain-groq = "*"
langchain-openai = "*"
langchain-google-genai = "*"
retry = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
